@@ -1,3 +1,8 @@
+2008-02-17 Borut Razem <borut.razem AT siol.net>
+
+	* packages/build.mingw32/Makefile: updated to gcc-4.2.3, w32api-3.11,
+	  mingw-runtime-3.14
+
 2008-01-12 Borut Razem <borut.razem AT siol.net>
 
 	* packages/build.nsis/Makefile: updated to NSIS version 2.34
